--- a/index.html
+++ b/index.html
@@ -1,14 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  <link rel="stylesheet" href="style.css">
-  <title>Frontend Mentor | Blog preview card</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
+    <link rel="stylesheet" href="style.css">
+    <title>Frontend Mentor | Blog preview card</title>
 </head>
 <body>
-
-
+    <main>
+        <article>
+            <figure class="article_img">
+                <img src="" alt="Illustration of HTML and CSS foundations card">
+            </figure>
+            <div class="article_txt">
+                <span class="tag">Learning</span>
+                <p class="date">Published 21 Dec 2023</p>
+                <h1>HTML & CSS foundations</h1>
+                <p class="description">These languages are the backbone of every website, defining structure, content, and presentation.</p>
+            </div>
+            <div class="article_author">
+                <figure class="article_author-img">
+                    <img src="" alt ="Photo of Greg Hooper">
+                </figure>
+                <p class="article_author-name">Greg Hooper</p>
+            </div>
+        </article>
+    </main>
 </body>
 </html>
