media queries & scss files

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="article_txt">
                 <span class="article_txt-tag">Learning</span>
                 <p class="article_txt-date">Published 21 Dec 2023</p>
-                <h1>HTML & CSS foundations</h1>
+                <h1 class="article_txt-title">HTML & CSS foundations</h1>
                 <p class="article_txt-description">These languages are the backbone of every website, defining structure, content, and presentation.</p>
             </div>
             <div class="article_author">
