add :hover & :focus

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <main>
-        <article class="article">
+        <article class="article" tabindex="0">
             <figure class="article_img">
                 <img src="assets/images/illustration-article.svg" alt="Illustration of HTML and CSS foundations card">
             </figure>
